--- a/index.html
+++ b/index.html
@@ -61,14 +61,35 @@ console.log("This file last modified " + docMod); // generates message in javaSc
     z-index: 1;
 }
 </style>
-
+	
+	<script> 
+	//code for drawing a rectangle 
+	function draw_b() {//function that draws a rectangle
+		var a_canas = document.getElementById("myCanvas");//this variable calls the canvas 
+		var a_context = a_canvas.getContext("2d");//this prints the rectangle in 2d 
+		a_context.fillRect(10, 25, 150, 100);//(x,y,width, height)-coordinates and weight and height of the rectangle 
+	        }
+	</script> 
+	
+	
+	
+	
 <body>
 <div id="header" class="w3-container w3-flat-carrot">
 	<h1>App6---HTML5-Canvas</h1>
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Content goes here.</p>
+	<p>
+	
+	<!--this will be used to create the border--> 
+	<canvas width="300" height="225"></canvas>
+	
+	
+	
+	
+	
+	</p>
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
