added code for writing my name and defined functions

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	        }
 	</script> 
 	
+	<script> 
+	//code for writing my name 
+	function draw_text(){//function that writes my name 
+		var c = document.getElementById("myCanvas"); //calls the canvas 
+		var ctx = c.getContext("2d");//writes name in 2d 
+		ctx.font = "25px Arial";//sets the size and font of my name 
+		ctx.fillText("Nida Mahesania", 70, 160); //writes my name on the coordinates written (x,y) 
+	</script> 
+	
 	
 	
 	
