added code for inserting the image and created function

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 		ctx.fillText("Nida Mahesania", 70, 160); //writes my name on the coordinates written (x,y) 
 	</script> 
 	
+	<script> 
+	//code for inserting the image 
+	function insert_image(){//function that inserts the image on canvas 
+		var a_canvas = document.getElementById("myCanvas"); //calls the canvas
+		var a_context = a_canvas.getContext("2d"); //prints the image in 2d 
+		var img = new Image(); //creates a variable "img" that is set equal to the new variable for image
+		img.src = "
 	
 	
 	
