--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 		var a_canvas = document.getElementById("myCanvas"); //calls the canvas
 		var a_context = a_canvas.getContext("2d"); //prints the image in 2d 
 		var img = new Image(); //creates a variable "img" that is set equal to the new variable for image
-		img.src = "
+		img.src = 
 		img.onload = function() {//loads the image onto canvas 
 				a_context.drawImage(img, 200,5,70,70); //determines where the image will be placed on the canvas(x,y,width, height) 
 				};
