--- a/index.html
+++ b/index.html
@@ -108,20 +108,16 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 </div>
 	
 <div id="content" class="w3-container">
-	<p>
-	
-	<!--this will be used to create the border--> 
-	<canvas width="300" height="225"></canvas>
-	
-	
-	
-	
-	
-	</p>
+	<p>Click the buttons to draw on this canvas! </p> <!--text that appears aboce the canvas-->
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
+
+	<canvas id="myCanvas" width="300" height+"190" style="border:1px solid #000000;"> 
+	</canvas> 
+	<!--this function creates the black border which will surround the rectangle, text and image---> 
+	
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
