--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	</canvas> 
 	<!--this function creates the black border which will surround the rectangle, text and image---> 
 	
+</div>
+	<a onclick-"draw_b();" class"w3-btn w3-black">Draw Rectangle</a>
+	<!--button that allows the rectangle to be drawn when pressed---> 
+	</div> 
+	<a onclick-"draw_text();" class"w3-btn w3-black">Write Name</a>
+	<!--button that writes my name when pressed---> 
+	</div> 
+	<a onclick-"insert_imsge();" class"w3-btn w3-black">Insert Image</a>
+	<!--button that displays the image when pressed---> 
+	</div> 
+	<a onclick-"clear_canvas();" class"w3-btn w3-black">Clear Canvas</a>
+	<!--button that clears the canvas when pressed---> 
+</div> 
+
+<?div> 
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
