--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 </script>
 
+	<script>
+	var a_canvas = document.getElementById("myCanvas");//defines variable "myCanvas" for the canvas
+	</script>
 
-
+<!--the styling of the page--> 		
 <style>	
 .body {
      margin: 0em;
@@ -65,7 +68,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	<script> 
 	//code for drawing a rectangle 
 	function draw_b() {//function that draws a rectangle
-		var a_canas = document.getElementById("myCanvas");//this variable calls the canvas 
+		var a_canvas = document.getElementById("myCanvas");//this variable calls the canvas 
 		var a_context = a_canvas.getContext("2d");//this prints the rectangle in 2d 
 		a_context.fillRect(10, 25, 150, 100);//(x,y,width, height)-coordinates and weight and height of the rectangle 
 	        }
@@ -77,18 +80,18 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 		var c = document.getElementById("myCanvas"); //calls the canvas 
 		var ctx = c.getContext("2d");//writes name in 2d 
 		ctx.font = "25px Arial";//sets the size and font of my name 
-		ctx.fillText("Nida Mahesania", 70, 160); //writes my name on the coordinates written (x,y) 
+		ctx.fillText("Nida Mahesania", 70, 160);//writes my name on the coordinates written (x,y) 
 	</script> 
 	
 	<script> 
 	//code for inserting the image 
 	function insert_image(){//function that inserts the image on canvas 
-		var a_canvas = document.getElementById("myCanvas"); //calls the canvas
-		var a_context = a_canvas.getContext("2d"); //prints the image in 2d 
-		var img = new Image(); //creates a variable "img" that is set equal to the new variable for image
+		var a_canvas = document.getElementById("myCanvas");//calls the canvas
+		var a_context = a_canvas.getContext("2d");//prints the image in 2d 
+		var img = new Image();//creates a variable "img" that is set equal to the new variable for image
 		img.src = "ic.jpg"
 		img.onload = function() {//loads the image onto canvas 
-				a_context.drawImage(img, 200,5,70,70); //determines where the image will be placed on the canvas(x,y,width, height) 
+				a_context.drawImage(img, 200,5,70,70);//determines where the image will be placed on the canvas(x,y,width, height) 
 				};
 	</script> 
 	
@@ -120,16 +123,17 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 </div>
 	<a onclick="draw_b();" class="w3-btn w3-black">Draw Rectangle</a>
-	<!--button that allows the rectangle to be drawn when pressed---> 
+	<!--button that allows the rectangle to be drawn when pressed-->
 	</div> 
 	<a onclick="draw_text();" class="w3-btn w3-black">Write Name</a>
-	<!--button that writes my name when pressed---> 
+	<!--button that writes my name when pressed-->
 	</div> 
 	<a onclick="insert_image();" class="w3-btn w3-black">Insert Image</a>
-	<!--button that displays the image when pressed---> 
+	<!--button that displays the name when pressed-->
 	</div> 
 	<a onclick="clear_canvas();" class="w3-btn w3-black">Clear Canvas</a>
-	<!--button that clears the canvas when pressed---> 
+	<!--button that clears the canvas when pressed-->
+	</div> 
 </div> 
 
 <?div> 
