--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+The goal of this code is to learn basic HTML elements and create a canvas page while adding an image, text, and shape to it, and being able to clear it. 
  
 Known Issues:
-blah, blah, blah, blah
+An issue that I had was that initially the buttons were not showing up until I rechecked my code and realized I forgot a few equal signs. After that, when I pressed 
+buttons, nothing would show up in the box. To fix this, I went over my code and realized I didn't close a few parantheses and manipulated the dimensions of the imsge 
+to get it ti fit into the box. I fixed these issues once I caught small mistakes in tiny details within the code. 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 -->
